# habr-hs-llvm

./: .gitignore  README.md  setup.sh
playground/: habrhs.cabal
playground/app/: Main.hs
step-00/: .gitignore  README.md  habrhs.cabal  stack.yaml
step-00/app/: Main.hs
step-01/: .gitignore  README.md  habrhs.cabal
step-01/app/: Main.hs
step-02/: habrhs.cabal  main.grt
step-02/app/: Parser.hs  Syntax.hs
step-03/: README.md  habrhs.cabal
step-03/app/: Main.hs
step-04/: README.md  habrhs.cabal  stack.yaml
step-04/app/AST/: Errors.hs  Processor.hs  Typing.hs
step-04/app/Codegen/: ASTBridge.hs  Builder.hs
step-05/: .gitignore  README.md  habrhs.cabal  main.grt  main.sh
step-05/app/: Compiler.hs  Lexer.hs  Main.hs  StringUtils.hs  Syntax.hs
step-05/app/AST/: Utils.hs
step-05/app/Codegen/: Primitives.hs
