cabal-version: 1.12

name:           habrhs
version:        0.1.0
build-type:     Simple

executable habrhs-exe
  main-is: Main.hs
  other-modules:
      Paths_habrhs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
