cabal-version: 1.12

name:           habrhs
version:        0.1.0
--description:    Please see the README at <https://repo-url#readme>
--homepage:       https://repo-url#readme
--bug-reports:    https://repo-url/issues
--author:         name
--maintainer:     email
build-type:     Simple
extra-source-files:
    README.md

--source-repository head
--  type: git
--  location: https://repo-url

executable habrhs-exe
  main-is: Main.hs
  other-modules:
      Paths_habrhs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
