cabal-version: 1.12

name:           habrhs
version:        0.1.0
build-type:     Simple
extra-source-files:
    README.md

executable habrhs-exe
  main-is: Main.hs
  other-modules:
      Paths_habrhs
    , Lexer
    , Syntax
    , Parser
    , StringUtils
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , parsec
    , bytestring
    , utf8-string
  default-language: Haskell2010
  default-extensions: ViewPatterns
