cabal-version: 1.12

name:           habrhs
version:        0.1.0
build-type:     Simple
extra-source-files:
    README.md

executable habrhs-exe
  main-is: Main.hs
  other-modules:
      Paths_habrhs
    , JIT
    , Lexer
    , Syntax
    , Parser
    , StringUtils
    , AST.Processor
    , AST.Utils
    , AST.Typing
    , AST.Errors
    , Codegen.Primitives
    , Codegen.Builder
    , Codegen.ASTBridge
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , parsec
    , bytestring
    , utf8-string
    , text
    , containers
    , llvm-hs        >= 9.0.1
    , llvm-hs-pure   >= 9.0.0
    , llvm-hs-pretty >= 0.9.0.0
    , mtl            >= 2.2
    , transformers   >= 0.5
    , haskeline      >= 0.7.5
  default-language: Haskell2010
  default-extensions: ViewPatterns
